# awx-mcp-server

./: .env.example  AAP_SUPPORT.md  AWX_MCP_QUERY_REFERENCE.md  DUAL_MODE_QUICKSTART.md  IMPLEMENTATION_STATUS.md  INSTALL_FROM_SOURCE.md  OS_COMPATIBILITY.md  README.md  test_aap_support.py
server/: CHANGELOG.md  Dockerfile  PRODUCTION_READY_SUMMARY.md  QUICK_START.md  README.md  REMOTE_CLIENT_SETUP.md  REMOTE_DEPLOYMENT.md  TWO_KEYS_QUICK_REFERENCE.md  VAULT_INTEGRATION.md  docker-compose.yml  manifest.json  pyproject.toml  server.json  test_awx_connection.py
server/deployment/: kubernetes.yaml
server/deployment/helm/: values.yaml
server/docs/: MULTI_ENVIRONMENT_SETUP.md  PRODUCTION_READINESS.md  README.md
server/src/awx_mcp_server/: __init__.py  __main__.py  auth.py  cli.py  http_server.py  mcp_server.py  monitoring.py  playbook_manager.py  project_registry.py  request_context.py  task_pods.py
server/src/awx_mcp_server/clients/: awxkit_client.py  base.py  composite_client.py  rest_client.py
server/src/awx_mcp_server/domain/: models.py
server/src/awx_mcp_server/storage/: config.py  credentials.py  vault_integration.py
server/src/awx_mcp_server/utils/: __init__.py  logging.py  parsing.py
tests/: README.md  pytest.ini  run_tests.py  test_client_cache.py  test_client_robustness.py  test_config.py  test_connection.py  test_domain.py  test_env_management.py  test_http_security.py  test_job_cancel.py  test_job_events.py  test_job_failure_summary.py  test_job_get.py  test_job_launch.py  test_job_stdout.py  test_list_inventories.py  test_list_jobs.py  test_list_projects.py  test_list_templates.py  test_mcp_integration.py  test_monitoring.py  test_parsing.py  test_project_update.py  (+3 more)
(+14 files in other folders)
